Remove unwanted depencies by updating the coverage builder and change the project hierarchy